service.yml
apiVersion: v1
kind: Service
metadata:
  name: backendapi
spec:
  selector:
    app: backendapi
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
