ingress-appgw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-appgw
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: backendapi
            port:
              number: 3000
        pathType: Exact
